example/nginx_ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
#    nginx.ingress.kubernetes.io/use-regex: "true"
  name: ingress-nginx
spec:
  rules:
  - http:
      paths:
      - path: /nginx/*
        backend:
          serviceName: nginx-service
          servicePort: 80
